--- a/charts/finclaw/values.yaml
+++ b/charts/finclaw/values.yaml
@@ -7,3 +7,5 @@ env:
     value: "<path:kv/data/finclaw#rapid>"
   - name: TWELVE_DATA
     value: "<path:kv/data/finclaw#twelveData>"
+  - name: WEATHER_API
+    value: "<path:kv/data/finclaw#weatherAPI>"
